--- a/project-code/Dockerfile
+++ b/project-code/Dockerfile
@@ -26,8 +26,8 @@ RUN pip install psutil
 
 RUN git clone https://github.com/eth-nn/beatsaver-Predictor
 
-WORKDIR /beatsaver_predictor
-RUN git pull 
+#WORKDIR /beatsaver_predictor
+#RUN git pull 
 
 WORKDIR /beatsaver-Predictor/project-code/scriptsPackage
 RUN pip install .
