--- a/project-code/requirements.txt
+++ b/project-code/requirements.txt
@@ -1,12 +1,31 @@
-connexion[swagger-ui]==2.2.0
-connexion
-Flask==1.0.2
-joblib==0.13.2
-jsonschema==2.6.0
-numpy==1.16.1
-openapi-spec-validator==0.2.6
-scikit-learn==0.20.2
-scipy==1.2.1
+connexion[swagger-ui]
+attrs==19.3.0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.1
+clickclick==1.2.2
+connexion==2.6.0
+Flask==1.1.2
+idna==2.9
+importlib-metadata==1.6.0
+inflection==0.4.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
+joblib==0.14.1
+jsonschema==3.2.0
+MarkupSafe==1.1.1
+numpy==1.18.2
+openapi-spec-validator==0.2.8
+pyrsistent==0.16.0
+PyYAML==5.3.1
+requests==2.23.0
+scikit-learn
+scipy==1.4.1
+six==1.14.0
 sklearn==0.0
+urllib3==1.25.8
+Werkzeug==1.0.1
+zipp==3.1.0
+pandas
+matplotlib
 pymongo==3.10.1
-pandas	
